--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html lang="el">
+<head>
+<meta charset="utf-8">
+<meta name="robots" content="index, follow">
+<meta name="keywords" content="αρμονία, μουσική εκπαίδευση, μουσική, harmony, music, music training">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Title</title>
+</head>
+<body>
+<h1>Rythmisian</h1>
+</body>
+</html>
